--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next-cloudinary": "^5.17.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-farcaster-embed": "^1.1.1",
     "react-tweet": "^3.2.0",
     "react-wrap-balancer": "^1.1.0",
     "react-youtube": "^10.1.0",
