--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "eslint": "8.31.0",
     "eslint-config-next": "13.1.2",
     "fs": "^0.0.1-security",
+    "geist": "^1.2.1",
     "image-size": "^1.1.0",
-    "next": "13.1.2",
+    "next": "^13.5.6",
     "next-cloudinary": "^5.17.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
