add: gallery frame
still a few small tweaks but a mvp workable frame with frames.js works

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dylsteck", 
+  "name": "dylsteck",
   "author": "@dylsteck",
   "private": true,
   "scripts": {
@@ -14,6 +14,7 @@
     "@types/react-dom": "18.2.19",
     "@vercel/analytics": "^1.1.3",
     "@vercel/speed-insights": "^1.0.9",
+    "frames.js": "^0.15.2",
     "geist": "1.2.2",
     "next": "canary",
     "next-mdx-remote": "^4.4.1",
