--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@farcaster/frame-sdk": "^0.0.3",
     "@tailwindcss/postcss": "4.0.0-alpha.13",
+    "@tanstack/react-query": "^5.61.0",
     "@types/node": "20.11.17",
     "@types/react": "18.2.55",
     "@types/react-dom": "18.2.19",
     "@vercel/analytics": "^1.1.3",
     "@vercel/speed-insights": "^1.0.9",
-    "frames.js": "^0.15.2",
     "geist": "1.2.2",
     "next": "^14.1.1",
     "next-mdx-remote": "^4.4.1",
@@ -23,7 +24,9 @@
     "react-dom": "18.2.0",
     "sugar-high": "^0.6.0",
     "tailwindcss": "4.0.0-alpha.13",
-    "typescript": "5.3.3"
+    "typescript": "5.3.3",
+    "viem": "2.x",
+    "wagmi": "^2.13.0"
   },
   "packageManager": "pnpm@9.11.0+sha512.0a203ffaed5a3f63242cd064c8fb5892366c103e328079318f78062f24ea8c9d50bc6a47aa3567cabefd824d170e78fa2745ed1f16b132e16436146b7688f19b"
 }
