--- a/package.json
+++ b/package.json
@@ -8,23 +8,23 @@
     "start": "next start"
   },
   "dependencies": {
-    "@farcaster/frame-sdk": "^0.0.18",
-    "@tailwindcss/postcss": "4.0.0-alpha.13",
-    "@tanstack/react-query": "^5.61.0",
-    "@types/node": "20.11.17",
-    "@types/react": "18.2.55",
-    "@types/react-dom": "18.2.19",
-    "geist": "1.2.2",
-    "next": "^15.1.3",
+    "@farcaster/frame-sdk": "^0.0.30",
+    "@tailwindcss/postcss": "4.0.9",
+    "@tanstack/react-query": "^5.67.1",
+    "@types/node": "22.13.9",
+    "@types/react": "19.0.10",
+    "@types/react-dom": "19.0.4",
+    "geist": "1.3.1",
+    "next": "^15.2.1",
     "next-mdx-remote": "^5.0.0",
-    "postcss": "^8.4.35",
+    "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "sugar-high": "^0.6.0",
-    "tailwindcss": "4.0.0-alpha.13",
-    "typescript": "5.3.3",
-    "vercel": "^39.1.2",
-    "viem": "2.x",
-    "wagmi": "^2.13.0"
+    "sugar-high": "^0.9.3",
+    "tailwindcss": "4.0.9",
+    "typescript": "5.8.2",
+    "vercel": "^41.3.1",
+    "viem": "^2.23.6",
+    "wagmi": "^2.14.12"
   }
 }
