--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
     "geist": "1.3.1",
-    "next": "^15.2.1",
+    "next": "15.1.3",
     "next-mdx-remote": "^5.0.0",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
