--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 /node_modules
 /.pnp
 .pnp.js
-package-lock.json
+.yarn/install-state.gz
 
 # testing
 /coverage
@@ -19,16 +19,14 @@ package-lock.json
 # misc
 .DS_Store
 *.pem
-.vscode
 
 # debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
 
-# env files
-.env
+# local env files
+.env*.local
 
 # vercel
 .vercel
@@ -37,5 +35,5 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
-# bun
+# bun 
 bun.lock
