--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
   "name": "dylsteck",
-  "author": "@dylsteck",
+  "author": "dylsteck",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
-    "@farcaster/frame-sdk": "^0.0.35",
+    "@farcaster/frame-sdk": "^0.0.38",
     "@tailwindcss/postcss": "4.0.9",
-    "@tanstack/react-query": "^5.74.4",
+    "@tanstack/react-query": "^5.75.5",
     "@types/node": "22.13.9",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
     "geist": "1.3.1",
-    "next": "15.3.1",
+    "next": "15.3.2",
     "next-mdx-remote": "^5.0.0",
     "postcss": "^8.5.3",
     "react": "^19.1.0",
