--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "author": "dylsteck",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "next dev --turbo",
+    "build": "next build --turbo",
     "start": "next start"
   },
   "dependencies": {
@@ -15,7 +15,7 @@
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
     "geist": "1.3.1",
-    "next": "15.3.2",
+    "next": "15.3.4",
     "next-mdx-remote": "^5.0.0",
     "postcss": "^8.5.3",
     "react": "^19.1.0",
