--- a/package.json
+++ b/package.json
@@ -2,26 +2,33 @@
   "name": "dylsteck",
   "author": "dylsteck",
   "private": true,
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/dylsteck/dylsteck"
+  },
   "scripts": {
     "dev": "next dev --turbo",
     "build": "next build --turbo",
     "start": "next start"
   },
   "dependencies": {
-    "@coinbase/onchainkit": "^0.38.17",
-    "@tailwindcss/postcss": "4.0.9",
-    "@tanstack/react-query": "^5.75.5",
-    "@types/node": "22.13.9",
-    "@types/react": "19.0.10",
-    "@types/react-dom": "19.0.4",
-    "geist": "1.3.1",
-    "next": "15.4.5",
+    "@coinbase/onchainkit": "^0.38.19",
+    "@tailwindcss/postcss": "4.1.12",
+    "@tanstack/react-query": "^5.85.9",
+    "geist": "1.4.2",
+    "next": "15.5.2",
     "next-mdx-remote": "^5.0.0",
-    "postcss": "^8.5.3",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "postcss": "^8.5.6",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "sugar-high": "^0.9.3",
-    "tailwindcss": "4.0.9",
-    "typescript": "5.8.2"
-  }
+    "tailwindcss": "4.1.12"
+  },
+  "devDependencies": {
+    "@types/node": "24.3.0",
+    "@types/react": "19.1.12",
+    "@types/react-dom": "19.1.9",
+    "typescript": "5.9.2"
+  },
+  "packageManager": "bun@1.2.21"
 }
