--- a/package.json
+++ b/package.json
@@ -12,23 +12,23 @@
     "start": "next start"
   },
   "dependencies": {
-    "@coinbase/onchainkit": "^0.38.19",
+    "@farcaster/miniapp-sdk": "^0.2.0",
     "@tailwindcss/postcss": "4.1.12",
-    "@tanstack/react-query": "^5.85.9",
+    "@tanstack/react-query": "^5.90.3",
     "geist": "1.4.2",
-    "next": "15.5.2",
+    "next": "15.5.5",
     "next-mdx-remote": "^5.0.0",
     "postcss": "^8.5.6",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "sugar-high": "^0.9.3",
     "tailwindcss": "4.1.12"
   },
   "devDependencies": {
     "@types/node": "24.3.0",
-    "@types/react": "19.1.12",
-    "@types/react-dom": "19.1.9",
-    "typescript": "5.9.2"
+    "@types/react": "19.2.2",
+    "@types/react-dom": "19.2.2",
+    "typescript": "5.9.3"
   },
-  "packageManager": "bun@1.2.21"
+  "packageManager": "bun@1.3.0"
 }
