--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "postcss": "^8.5.6",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-farcaster-embed": "^1.10.0",
+    "react-tweet": "^3.2.2",
     "sugar-high": "^0.9.3",
     "tailwindcss": "4.1.12"
   },
