--- a/package.json
+++ b/package.json
@@ -7,30 +7,34 @@
     "url": "https://github.com/dylsteck/dylsteck"
   },
   "scripts": {
-    "dev": "next dev --turbo",
-    "build": "next build --turbo",
+    "dev": "next dev",
+    "build": "next build",
     "start": "next start"
   },
   "dependencies": {
     "@farcaster/miniapp-sdk": "^0.2.1",
-    "@tailwindcss/postcss": "4.1.12",
-    "@tanstack/react-query": "^5.90.3",
-    "geist": "1.4.2",
-    "next": "15.5.6",
+    "@tailwindcss/postcss": "4.1.17",
+    "@tanstack/react-query": "^5.90.10",
+    "geist": "1.5.1",
+    "next": "16.0.3",
     "next-mdx-remote": "^5.0.0",
     "postcss": "^8.5.6",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
     "react-farcaster-embed": "^1.11.0",
     "react-tweet": "^3.2.2",
     "sugar-high": "^0.9.3",
-    "tailwindcss": "4.1.12"
+    "tailwindcss": "4.1.17"
   },
   "devDependencies": {
-    "@types/node": "24.3.0",
-    "@types/react": "19.2.2",
-    "@types/react-dom": "19.2.2",
+    "@types/node": "24.10.1",
+    "@types/react": "19.2.6",
+    "@types/react-dom": "19.2.3",
     "typescript": "5.9.3"
   },
-  "packageManager": "bun@1.3.0"
+  "packageManager": "bun@1.3.0",
+  "overrides": {
+    "@types/react": "19.2.6",
+    "@types/react-dom": "19.2.3"
+  }
 }
