--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@farcaster/miniapp-sdk": "^0.2.1",
     "@tailwindcss/postcss": "4.1.17",
     "@tanstack/react-query": "^5.90.10",
+    "@vercel/og": "^0.8.5",
     "geist": "1.5.1",
     "next": "16.0.3",
     "next-mdx-remote": "^5.0.0",
