--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "@tanstack/react-query": "^5.90.10",
     "@vercel/og": "^0.8.5",
     "geist": "1.5.1",
-    "next": "16.0.3",
+    "next": "16.0.7",
     "next-mdx-remote": "^5.0.0",
     "postcss": "^8.5.6",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "19.2.1",
+    "react-dom": "19.2.1",
     "react-farcaster-embed": "^1.11.0",
     "react-tweet": "^3.2.2",
     "sugar-high": "^0.9.3",
@@ -29,13 +29,9 @@
   },
   "devDependencies": {
     "@types/node": "24.10.1",
-    "@types/react": "19.2.6",
+    "@types/react": "19.2.7",
     "@types/react-dom": "19.2.3",
     "typescript": "5.9.3"
   },
-  "packageManager": "bun@1.3.0",
-  "overrides": {
-    "@types/react": "19.2.6",
-    "@types/react-dom": "19.2.3"
-  }
+  "packageManager": "bun@1.3.3"
 }
