--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@farcaster/miniapp-sdk": "^0.2.1",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.4.2",
     "@tailwindcss/postcss": "4.1.17",
     "@tanstack/react-query": "^5.90.10",
     "@vercel/og": "^0.8.5",
@@ -25,12 +27,14 @@
     "react-farcaster-embed": "^1.11.0",
     "react-tweet": "^3.2.2",
     "sugar-high": "^0.9.3",
-    "tailwindcss": "4.1.17"
+    "tailwindcss": "4.1.17",
+    "three": "^0.182.0"
   },
   "devDependencies": {
     "@types/node": "24.10.1",
     "@types/react": "19.2.7",
     "@types/react-dom": "19.2.3",
+    "@types/three": "^0.182.0",
     "typescript": "5.9.3"
   },
   "packageManager": "bun@1.3.3"
